--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
 			        transform: rotateX(0deg) rotateY(0deg);
 			}
 			100%{
-			-webkit-transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg);
-			   -moz-transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg);
-			    -ms-transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg);
-			     -o-transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg);
-			        transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg);
+			-webkit-transform: rotateX(360deg) rotateY(360deg);
+			   -moz-transform: rotateX(360deg) rotateY(360deg);
+			    -ms-transform: rotateX(360deg) rotateY(360deg);
+			     -o-transform: rotateX(360deg) rotateY(360deg);
+			        transform: rotateX(360deg) rotateY(360deg);
 			}
 		}
 	</style>
